--- a/webapp/index.html
+++ b/webapp/index.html
@@ -10,8 +10,22 @@
         }
     </style>
     <title>Exercise Application</title>
+    <script
+        id="sap-ui-bootstrap"
+        src="resources/sap-ui-core.js"
+        data-sap-ui-theme="sap_fiori_3"
+        data-sap-ui-libs="sap.m"
+        data-sap-ui-compatVersion="edge"
+        data-sap-ui-async="true"
+        data-sap-ui-onInit="module:sap/training/exc/index"
+        data-sap-ui-resourceroots='{
+            "sap.training.exc":"./"
+        }'
+    ></script>
+
 </head>
-<body>
-    <div>Hello World</div>
+<body class="sapUiBody" id="content">
+    
+
 </body>
 </html>
